phpldapadmin/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ldapadmin-ingress
  namespace: openldap
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-max-age: "315360000"
    ingress.kubernetes.io/hsts-preload: "true"
spec:
  rules:
  - host: ldapadmin.ithub.space
    http:
      paths:
      - path: /
        backend:
          serviceName: phpldapadmin-service
          servicePort: 9943
  tls:
  - hosts:
    - ldapadmin.ithub.space
    secretName: ldapadmin-ithub-space-prod-tls
